tests/errors/test_31.xpp
// Excess elements provided in array init expression

fn main() void {
	let x: i64[1] = [1, 2];
}
